@@ -1,3 +1,7 @@
+2010-05-30 03:42-EDT Gregory John Casamento <greg.casamento@gmail.com>
+
+	* Modules/Projects/Application/Resources/main.m: Same as below.
+
 2010-05-30 03:17-EDT Gregory John Casamento <greg.casamento@gmail.com>
 
 	* Modules/Projects/Application/Resources/AppController.h
